--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -17,9 +17,9 @@
 
 <resources>
 
-    <style name="Theme.Bacon" parent="@style/Theme.AppCompat.Light.NoActionBar">
+    <!--<style name="Theme.AppTheme" parent="Theme.AppCompat.Light.DarkActionBar"/>-->
 
-    </style>
+    <style name="Theme.Bacon" parent="@style/Theme.AppCompat.Light.NoActionBar"/>
 
     <style name="Theme.Bacon.Detail">
         <item name="android:statusBarColor">@android:color/transparent</item>
