--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -18,9 +18,11 @@
         <!--suppress AndroidLintContentDescription -->
         <com.example.xyzreader.ui.DynamicHeightNetworkImageView
             android:id="@+id/thumbnail"
-            android:layout_width="100dp"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:background="@color/photo_placeholder" />
+            android:background="@color/photo_placeholder"
+            android:scaleType="centerCrop"
+            />
 
         <TextView
             android:id="@+id/article_title"
@@ -31,9 +33,11 @@
             android:paddingTop="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="4dp"
-            android:textColor="@color/ltgray"
+            android:textColor="@color/text_color_dark"
             android:ellipsize="end"
-            android:maxLines="4" />
+            android:maxLines="4"
+            android:textStyle="bold"
+            />
 
         <TextView
             android:id="@+id/article_subtitle"
@@ -43,7 +47,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="16dp"
-            android:textColor="#6000"
+            android:textColor="@color/text_color_dark"
             android:maxLines="2"
             android:ellipsize="end" />
     </LinearLayout>
