--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -16,10 +16,16 @@
 -->
 
 <resources>
-    <color name="photo_placeholder">#ccc</color>
+    <color name="photo_placeholder">#ffffff</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
+    <color name="theme_primary">#dd2c00</color>
+    <color name="theme_primary_dark">#a30000</color>
+    <color name="theme_primary_light">#ff6434</color>
+    <color name="theme_accent">#ff6434</color>
+
     <color name="ltgray">#ffe0e0e0</color>
+    <color name="text_color_light">#ffffff</color>
+    <color name="text_color_dark">#000000</color>
+
+
 </resources>
