--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -19,7 +19,10 @@
 
     <!--<style name="Theme.AppTheme" parent="Theme.AppCompat.Light.DarkActionBar"/>-->
 
-    <style name="Theme.Bacon" parent="@style/Theme.AppCompat.Light.NoActionBar"/>
+    <style name="Theme.Bacon" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/theme_primary</item>
+        <item name="colorPrimaryDark">@color/theme_primary_dark</item>
+    </style>
 
     <style name="Theme.Bacon.Detail">
         <item name="android:statusBarColor">@android:color/transparent</item>
