--- a/XYZReader/src/main/res/drawable/photo_background_protection.xml
+++ b/XYZReader/src/main/res/drawable/photo_background_protection.xml
@@ -1,9 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <!--android:startColor="#d6d3d3"-->
     <gradient
         android:angle="-90"
-        android:startColor="#3000"
-        android:endColor="#0000"
+        android:startColor="#46000000"
+        android:endColor="#00000000"
         android:type="linear"
         android:useLevel="false" />
 </shape>
