--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -8,7 +8,8 @@
     android:layout_marginBottom="4dp"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?selectableItemBackground">
+    android:foreground="?selectableItemBackground"
+    android:elevation="@dimen/card_view_elevation">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,7 +50,8 @@
             android:paddingBottom="16dp"
             android:textColor="@color/text_color_dark"
             android:maxLines="2"
-            android:ellipsize="end" />
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-light" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
