--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -17,15 +17,28 @@
 
 <resources>
 
-    <!--<style name="Theme.AppTheme" parent="Theme.AppCompat.Light.DarkActionBar"/>-->
-
-    <style name="Theme.Bacon" parent="@style/Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/theme_primary</item>
-        <item name="colorPrimaryDark">@color/theme_primary_dark</item>
+    <style name="Theme.Bacon" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
     </style>
 
     <style name="Theme.Bacon.Detail">
         <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
+    <style name="text_article_title">
+        <item name="android:textSize">@dimen/detail_title_text_size</item>
+        <item name="android:textColor">@color/text_color_light</item>
+        <item name="android:textColorLink">@color/accent</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="text_article_body">
+        <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:textSize">@dimen/detail_body_text_size</item>
+        <item name="android:textColor">@color/text_color_dark</item>
+        <item name="android:textColorLink">@color/accent</item>
     </style>
 
 </resources>
