--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -9,7 +9,7 @@
     android:clickable="true"
     android:focusable="true"
     android:foreground="?selectableItemBackground"
-    android:elevation="@dimen/card_view_elevation">
+    app:elevation="@dimen/card_view_elevation">
 
     <LinearLayout
         android:layout_width="match_parent"
